<resources>
    <string name="app_name">CU</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="inf_para_registrarte_tan_solo_rellena_los_campos_y_pulsa_registrar">Inf: Para registrarte tan solo rellena los campos y pulsa registrar ;)</string>
    <string name="title_activity_fotoy_mapa">Map</string>
</resources>