<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Ini"
        android:layout_width="0dp"
        android:layout_height="112dp"
        android:onClick="IniciarSesion"
        android:text="@string/iniciar_sesi_n"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Reg"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Reg"
        android:layout_width="0dp"
        android:layout_height="112dp"
        android:onClick="Registrarse"
        android:text="@string/registrarse"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/Ini"
        app:layout_constraintTop_toTopOf="@+id/Ini" />

    <EditText
        android:id="@+id/IniUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/IniContrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/IniUser"
        app:layout_constraintStart_toStartOf="@+id/IniUser"
        app:layout_constraintTop_toBottomOf="@+id/IniUser"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="211dp"
        android:layout_height="71dp"
        android:layout_marginTop="24dp"
        android:text="@string/inf_para_registrarte_tan_solo_rellena_los_campos_y_pulsa_registrar"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/IniContrasenia"
        app:layout_constraintStart_toStartOf="@+id/IniContrasenia"
        app:layout_constraintTop_toBottomOf="@+id/IniContrasenia" />

</androidx.constraintlayout.widget.ConstraintLayout>